fix .row margins on iOS

--- a/src/app/styles/iOS.scss
+++ b/src/app/styles/iOS.scss
@@ -14,6 +14,11 @@
     margin-right: -10px;
   }
 
+  .row {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
   .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1,
   .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2,
   .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3,
